Show taken seats and confirm purchases